[package]
name = "rust_data_structures"
version = "0.1.0"
edition = "2021"
authors = ["Himansh Mewada"]
description = "Common data structures for Rust: Stack, Queue, BST, Trie, Graph, and Union-Find"
license = "MIT OR Apache-2.0"
repository = "https://github.com/example/rust_data_structures"

[dependencies]
